--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.55.4",
     "@tanstack/react-router": "^1.58.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
